// protoc --go_out=model --go_opt=module=application-model model/api.proto

syntax = "proto3";

package generated;
option go_package = "application-model/generated";

message CPUTaskResponse {
	map<string, float> services = 1;
}

message ServiceResponse {
	string protocol = 1;
	string status = 2;
}

message NetworkTaskResponse {
	repeated string services = 1;
	map<string, ServiceResponse> responses = 2;
	
	string payload = 3;
}

message TaskResponses {
	CPUTaskResponse cpu_task = 1;
	NetworkTaskResponse network_task = 2;
}

message Request {
	string payload = 1;
}

message Response {
	string message = 1;
	string endpoint = 2;

	TaskResponses tasks = 4;
}